--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "babel": "babel-node --presets es2015,stage-2",
+    "start": "nodemon --exec npm run babel -- src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "firebase": "^4.2.0",
+    "firebase-admin": "^5.0.1",
     "request": "^2.71.0"
   }
 }
